--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="orange">#FF4500</color>
+    <color name="orange_100">#FF3300</color>
+    <color name="gray">#808080</color>
+    <color name="silver">#C0C0C0</color>
 </resources>
