--- a/app/src/main/res/layout/activity_custom_layout.xml
+++ b/app/src/main/res/layout/activity_custom_layout.xml
@@ -55,14 +55,15 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="50dp"
                 android:textSize="20sp"
-                android:layout_gravity="center_vertical"/>
+                android:layout_gravity="center_vertical"
+                android:textAllCaps="false"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/money"
                 android:textSize="20sp"
                 android:textColor="@color/white"
-                android:layout_gravity="center_vertical"/>
+                android:layout_gravity="center_vertical" />
         </LinearLayout>
     </RelativeLayout>
 
