--- a/app/src/main/res/layout/parent_item.xml
+++ b/app/src/main/res/layout/parent_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     tools:context=".CustomLayout">
     <RelativeLayout
-        android:id="@+id/rlBackground"
+        android:id="@+id/relative_background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -17,7 +17,7 @@
         android:background="@drawable/custom_border">
 
         <TextView
-            android:id="@+id/tvTitleTop"
+            android:id="@+id/text_title_top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -29,20 +29,20 @@
             android:textStyle="bold" />
 
         <LinearLayout
-            android:id="@+id/llListView"
+            android:id="@+id/linear_parent_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="60dp"
             android:layout_marginBottom="40dp"
-            android:layout_below="@id/tvTitleTop"/>
+            android:layout_below="@id/text_title_top"/>
 
         <LinearLayout
-            android:id="@+id/llBottom"
+            android:id="@+id/linear_bottom"
             android:layout_width="match_parent"
             android:layout_height="160dp"
-            android:layout_below="@id/llListView"
-            android:background="@drawable/custrom_border_bottom"
+            android:layout_below="@id/linear_parent_item"
+            android:background="@drawable/custom_border_bottom"
             android:orientation="horizontal"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true">
@@ -66,5 +66,4 @@
                 android:layout_gravity="center_vertical" />
         </LinearLayout>
     </RelativeLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
