--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,17 +13,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/linear_bottom"
-        tools:listitem="@layout/parent_item"
-        android:scrollbars="vertical"/>
-    <LinearLayout
-        android:id="@+id/linear_bottom"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/recycle_list"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/orange"
-        android:orientation="horizontal"/>
+        android:foregroundGravity="center"
+        tools:listitem="@layout/parent_item"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
