--- a/app/src/main/res/layout/sub_item.xml
+++ b/app/src/main/res/layout/sub_item.xml
@@ -31,9 +31,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:gravity="right|center_vertical"
+            android:gravity="left"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:text="@{item.title}"/>
+            android:text="@string/title"
+            android:lineSpacingExtra="10dp"/>
     </LinearLayout>
 </layout>
