--- a/app/src/main/res/layout/parent_item.xml
+++ b/app/src/main/res/layout/parent_item.xml
@@ -13,8 +13,8 @@
       android:id="@+id/constraint_parent"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:background="@drawable/custom_border"
       android:layout_margin="10dp"
+      android:background="@drawable/custom_border"
       tools:context=".CustomLayout">
 
     <TextView
@@ -40,38 +40,44 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_title_top"/>
-    <LinearLayout
+
+    <com.task.DrawShape
         android:id="@+id/linear_bottom"
         android:layout_width="match_parent"
         android:layout_height="160dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:background="@drawable/custom_border_bottom"
-        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/linear_parent_item">
+        app:layout_constraintTop_toBottomOf="@id/linear_parent_item"/>
 
       <androidx.appcompat.widget.AppCompatButton
+          android:id="@+id/button_contact"
           android:layout_width="150dp"
           android:layout_height="60dp"
           android:layout_gravity="center_vertical"
-          android:layout_marginStart="30dp"
-          android:layout_marginEnd="50dp"
           android:background="@drawable/custom_button"
           android:text="@string/contact_us"
           android:textAllCaps="false"
           android:textColor="@color/orange"
-          android:textSize="20sp" />
+          android:textSize="20sp"
+          android:layout_marginStart="20dp"
+          app:layout_constraintTop_toTopOf="@id/linear_bottom"
+          app:layout_constraintBottom_toBottomOf="@id/linear_bottom"
+          app:layout_constraintStart_toStartOf="@id/linear_bottom"
+          app:layout_constraintEnd_toStartOf="@id/text_money"/>
 
       <TextView
+          android:id="@+id/text_money"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical"
           android:text="@string/money"
           android:textColor="@color/white"
-          android:textSize="20sp" />
-    </LinearLayout>
+          android:textSize="20sp"
+          android:layout_marginEnd="20dp"
+          app:layout_constraintTop_toTopOf="@id/linear_bottom"
+          app:layout_constraintBottom_toBottomOf="@id/linear_bottom"
+          app:layout_constraintEnd_toEndOf="@id/linear_bottom"
+          app:layout_constraintStart_toEndOf="@id/button_contact"/>
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
