--- a/app/src/main/res/layout/parent_item.xml
+++ b/app/src/main/res/layout/parent_item.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
   <data>
+
     <variable
         name="item"
         type="com.task.model.ParentList" />
@@ -39,45 +40,43 @@
         app:layout_constraintBottom_toTopOf="@id/linear_bottom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_title_top"/>
+        app:layout_constraintTop_toBottomOf="@+id/text_title_top" />
 
     <com.task.DrawShape
         android:id="@+id/linear_bottom"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="120dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/linear_parent_item"/>
+        app:layout_constraintTop_toBottomOf="@id/linear_parent_item" />
 
-      <androidx.appcompat.widget.AppCompatButton
-          android:id="@+id/button_contact"
-          android:layout_width="150dp"
-          android:layout_height="60dp"
-          android:layout_gravity="center_vertical"
-          android:background="@drawable/custom_button"
-          android:text="@string/contact_us"
-          android:textAllCaps="false"
-          android:textColor="@color/orange"
-          android:textSize="20sp"
-          android:layout_marginStart="20dp"
-          app:layout_constraintTop_toTopOf="@id/linear_bottom"
-          app:layout_constraintBottom_toBottomOf="@id/linear_bottom"
-          app:layout_constraintStart_toStartOf="@id/linear_bottom"
-          app:layout_constraintEnd_toStartOf="@id/text_money"/>
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button_contact"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/custom_button"
+        android:text="@string/contact_us"
+        android:textAllCaps="false"
+        android:textColor="@color/orange"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@id/linear_bottom"
+        app:layout_constraintEnd_toStartOf="@id/text_money"
+        app:layout_constraintStart_toStartOf="@id/linear_bottom"
+        app:layout_constraintTop_toTopOf="@id/linear_bottom" />
 
-      <TextView
-          android:id="@+id/text_money"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_gravity="center_vertical"
-          android:text="@string/money"
-          android:textColor="@color/white"
-          android:textSize="20sp"
-          android:layout_marginEnd="20dp"
-          app:layout_constraintTop_toTopOf="@id/linear_bottom"
-          app:layout_constraintBottom_toBottomOf="@id/linear_bottom"
-          app:layout_constraintEnd_toEndOf="@id/linear_bottom"
-          app:layout_constraintStart_toEndOf="@id/button_contact"/>
+    <TextView
+        android:id="@+id/text_money"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:text="@string/money"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@id/linear_bottom"
+        app:layout_constraintEnd_toEndOf="@id/linear_bottom"
+        app:layout_constraintStart_toEndOf="@id/button_contact"
+        app:layout_constraintTop_toTopOf="@id/linear_bottom" />
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
