type in adapter

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".MainActivity"
-    android:layout_margin="50dp">
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycle_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:foregroundGravity="center"
-        tools:listitem="@layout/parent_item"/>
+    tools:context=".MainActivity">
+  <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/recycle_list"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:foregroundGravity="center"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      tools:listitem="@layout/parent_item" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
