--- a/app/src/main/res/drawable/custom_border_bottom.xml
+++ b/app/src/main/res/drawable/custom_border_bottom.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:bottomLeftRadius="25dp"
+    <corners android:topLeftRadius="25dp"
+        android:topRightRadius="25dp"
         android:bottomRightRadius="25dp"/>
-    <stroke android:color="@color/orange"
+    <stroke android:color="@color/gray_100"
         android:width="2dp"/>
-    <solid android:color="@color/orange"/>
+    <solid android:color="@color/gray_100"/>
 </shape>
