--- a/app/src/main/res/layout/parent_item2.xml
+++ b/app/src/main/res/layout/parent_item2.xml
@@ -2,60 +2,48 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
   <data>
+
     <variable
         name="item"
         type="com.task.model.ParentList" />
   </data>
 
-  <androidx.constraintlayout.widget.ConstraintLayout
+  <androidx.cardview.widget.CardView
       android:id="@+id/constraint_parent"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+      android:layout_width="180dp"
+      android:layout_height="250dp"
       android:layout_margin="20dp"
-      android:background="@drawable/custom_border"
-      tools:context=".CustomLayout">
-  <View
-      android:id="@+id/view_top"
-      android:layout_width="match_parent"
-      android:layout_height="160dp"
-      android:background="@drawable/custom_border_bottom"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintBottom_toTopOf="@id/linear_bottom"/>
+      app:cardElevation="4dp"
+      app:cardCornerRadius="25dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+      <View
+        android:id="@+id/view_top"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:background="@drawable/custom_border_bottom"/>
+
     <TextView
         android:id="@+id/text_title_top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
-        android:textSize="56sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/view_top"/>
-    <LinearLayout
-        android:id="@+id/linear_bottom"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/view_top"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:orientation="vertical">
-      <TextView
-          android:layout_width="match_parent"
-          android:layout_height="100dp"/>
+        android:layout_gravity="center"
+        android:textSize="24sp"
+        android:textStyle="bold"/>
       <androidx.appcompat.widget.AppCompatButton
-          android:layout_width="150dp"
-          android:layout_height="60dp"
-          android:layout_marginStart="20dp"
+          android:layout_width="100dp"
+          android:layout_height="50dp"
+          android:background="@drawable/custom_border"
           android:text="Apply"
-          android:textSize="20sp"
+          android:layout_gravity="center"
           android:textAllCaps="false"
-          android:layout_marginBottom="20dp"
-          android:background="@drawable/custom_border"/>
+          android:textSize="18sp" />
     </LinearLayout>
-  </androidx.constraintlayout.widget.ConstraintLayout>
+  </androidx.cardview.widget.CardView>
 </layout>
