--- a/app/src/main/res/layout/parent_item2.xml
+++ b/app/src/main/res/layout/parent_item2.xml
@@ -32,7 +32,7 @@
         android:id="@+id/text_title_top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:layout_gravity="center"
         android:textSize="24sp"
         android:textStyle="bold"/>
