--- a/app/src/main/res/layout/type_choose.xml
+++ b/app/src/main/res/layout/type_choose.xml
@@ -4,10 +4,10 @@
     android:layout_height="wrap_content"
     android:layout_margin="20dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-  <TextView
+  <androidx.appcompat.widget.AppCompatTextView
+      android:id="@+id/text_choose"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="@string/text_choose"
       android:textColor="@color/black"
       android:textStyle="bold"
       android:textSize="36sp"
