--- a/app/src/main/res/layout/layout_item2.xml
+++ b/app/src/main/res/layout/layout_item2.xml
@@ -11,7 +11,7 @@
   </data>
 
   <androidx.cardview.widget.CardView
-      android:id="@+id/constraint_parent"
+      android:id="@+id/card_parent"
       android:layout_width="180dp"
       android:layout_height="250dp"
       android:layout_margin="20dp"
