--- a/app/src/main/res/layout/layout_item_card.xml
+++ b/app/src/main/res/layout/layout_item_card.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
   <data>
-
     <variable
         name="item"
-        type="com.task.model.ParentList" />
+        type="com.task.model.ParentList.DescriptionItem" />
   </data>
 
   <androidx.cardview.widget.CardView
@@ -28,14 +27,15 @@
         android:layout_height="150dp"
         android:background="@drawable/custom_border_bottom"/>
 
-    <TextView
-        android:id="@+id/text_title_top"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:layout_gravity="center"
-        android:textSize="24sp"
-        android:textStyle="bold"/>
+      <TextView
+          android:id="@+id/text_title_top"
+          android:layout_width="0dp"
+          android:layout_height="23dp"
+          android:layout_gravity="center"
+          android:textColor="@color/black"
+          android:textSize="24sp"
+          android:text="@{Integer.toString(item.id)}"
+          android:textStyle="bold" />
       <androidx.appcompat.widget.AppCompatButton
           android:layout_width="100dp"
           android:layout_height="50dp"
