--- a/app/src/main/res/layout/description_layout.xml
+++ b/app/src/main/res/layout/description_layout.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="item"
-            type="com.task.model.ParentList" />
+            type="com.task.model.ParentList.DescriptionItemChild" />
     </data>
 
     <LinearLayout
@@ -31,6 +31,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:gravity="left"
+            android:text="@{item.description}"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:lineSpacingExtra="10dp"/>
