--- a/app/src/main/res/layout/layout_item_card.xml
+++ b/app/src/main/res/layout/layout_item_card.xml
@@ -27,10 +27,10 @@
         android:layout_height="150dp"
         android:background="@drawable/custom_border_bottom"/>
 
-      <TextView
+      <androidx.appcompat.widget.AppCompatTextView
           android:id="@+id/text_title_top"
-          android:layout_width="0dp"
-          android:layout_height="23dp"
+          android:layout_width="wrap_content"
+          android:layout_height="40dp"
           android:layout_gravity="center"
           android:textColor="@color/black"
           android:textSize="24sp"
