--- a/app/src/main/res/layout/layout_item_card.xml
+++ b/app/src/main/res/layout/layout_item_card.xml
@@ -10,7 +10,7 @@
         type="com.task.model.ParentList.DescriptionItem" />
     <variable
         name="onClickItemCard"
-        type="Function1&lt;Integer,Unit>" />
+        type="Function1&lt;com.task.model.ParentList.DescriptionItem,Unit>" />
   </data>
 
   <androidx.cardview.widget.CardView
@@ -19,7 +19,7 @@
       android:layout_height="250dp"
       android:layout_margin="20dp"
       app:cardElevation="4dp"
-      android:onClick="@{() -> onClickItemCard.invoke(2)}"
+      android:onClick="@{() -> onClickItemCard.invoke(item)}"
       app:cardCornerRadius="25dp">
 
     <LinearLayout
