--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="item"
-            type="com.entities.Genres" />
+            type="com.dto.Genres" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
