--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -7,7 +7,7 @@
 
     <variable
         name="movie"
-        type="com.dto.MovieDetailsDTO" />
+        type="com.dto.MovieDetails" />
   </data>
 
   <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,7 +15,16 @@
       android:layout_height="match_parent"
       android:background="@color/pink_200"
       tools:context=".MovieDetailFragment">
-
+    <ImageButton
+        android:id="@+id/image_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_back"
+        android:background="@android:color/transparent"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/image_layout"
         android:layout_width="match_parent"
@@ -89,19 +98,6 @@
               app:layout_constraintTop_toTopOf="parent" />
 
           <TextView
-              android:id="@+id/text_movie_tag_line"
-              android:layout_width="0dp"
-              android:layout_height="wrap_content"
-              android:text="@{movie.tagline}"
-              android:textAlignment="center"
-              android:textColor="@color/pink_300"
-              android:textSize="12sp"
-              android:textStyle="bold"
-              app:layout_constraintEnd_toEndOf="parent"
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toBottomOf="@+id/text_movie_title" />
-
-          <TextView
               android:id="@+id/text_movie_info"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
@@ -113,14 +109,14 @@
               android:textStyle="bold"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toBottomOf="@+id/text_movie_tag_line" />
+              app:layout_constraintTop_toBottomOf="@+id/text_movie_title" />
 
           <TextView
               android:id="@+id/text_date_release_title"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp"
-              android:text="ReleaseDate: "
+              android:text="@string/release_date"
               android:textColor="@color/blue_200"
               android:textSize="12sp"
               android:textStyle="bold"
@@ -141,7 +137,7 @@
               android:id="@+id/text_movie_rating_title"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:text="Rating: "
+              android:text="@string/rating"
               android:textColor="@color/blue_200"
               android:textSize="12sp"
               android:textStyle="bold"
@@ -162,7 +158,7 @@
               android:id="@+id/text_movie_runtime_title"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:text="Runtime: "
+              android:text="@string/runtime"
               android:textColor="@color/blue_200"
               android:textSize="12sp"
               android:textStyle="bold"
@@ -173,7 +169,7 @@
               android:id="@+id/text_movie_runtime"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:text="@{String.valueOf(movie.runtime)}"
+              android:text='@{String.format("%d phút", movie.runtime)}'
               android:textColor="@color/pink_100"
               android:textSize="12sp"
               app:layout_constraintBaseline_toBaselineOf="@+id/text_movie_runtime_title"
@@ -183,7 +179,7 @@
               android:id="@+id/text_movie_budget_title"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:text="Budget: "
+              android:text="@string/budget"
               android:textColor="@color/blue_200"
               android:textSize="12sp"
               android:textStyle="bold"
@@ -204,7 +200,7 @@
               android:id="@+id/text_movie_revenue_title"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:text="Revenue: "
+              android:text="@string/revenue"
               android:textColor="@color/blue_200"
               android:textSize="12sp"
               android:textStyle="bold"
@@ -222,16 +218,37 @@
               app:layout_constraintStart_toEndOf="@+id/text_movie_revenue_title" />
 
           <TextView
-              android:id="@+id/text_movie_overview_title"
+              android:id="@+id/text_movie_genres_title"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp"
-              android:text="Overview :"
+              android:text="@string/genres"
               android:textColor="@color/blue_200"
               android:textSize="12sp"
               android:textStyle="bold"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/text_movie_revenue_title" />
+
+          <TextView
+              android:id="@+id/text_movie_genres"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:textColor="@color/pink_100"
+              android:textSize="12sp"
+              app:layout_constraintBaseline_toBaselineOf="@id/text_movie_genres_title"
+              app:layout_constraintStart_toEndOf="@id/text_movie_genres_title" />
+
+          <TextView
+              android:id="@+id/text_movie_overview_title"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginTop="5dp"
+              android:text="@string/overview"
+              android:textColor="@color/blue_200"
+              android:textSize="12sp"
+              android:textStyle="bold"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toBottomOf="@id/text_movie_genres_title" />
 
           <TextView
               android:id="@+id/text_movie_overview"
@@ -242,6 +259,7 @@
               android:textSize="12sp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/text_movie_overview_title" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
       </ScrollView>
