--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/pink_200"
-    tools:context=".MoviesFragment">
+    tools:context="com.fragments.MoviesFragment">
 
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recycler_movies"
@@ -16,7 +16,7 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      tools:listitem="@layout/item_movie" />
+      tools:listitem="@layout/item_movie"/>
 
   <ProgressBar
       android:id="@+id/progress_bar_movies"
