--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -6,7 +6,16 @@
     android:layout_height="match_parent"
     android:background="@color/pink_200"
     tools:context="com.fragments.MoviesFragment">
-
+  <TextView
+      android:id="@+id/text_empty"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Danh sách trống!"
+      android:textSize="24sp"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"/>
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recycler_movies"
       android:layout_width="match_parent"
@@ -23,6 +32,7 @@
       style="?android:attr/progressBarStyle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:visibility="gone"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
