--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -7,14 +7,14 @@
 
     <variable
         name="movie"
-        type="com.model.MovieDetailModel" />
+        type="com.task.model.MovieDetailModel" />
   </data>
 
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@color/pink_200"
-      tools:context="com.fragments.MovieDetailFragment">
+      tools:context=".fragments.MovieDetailFragment">
     <ImageButton
         android:id="@+id/image_back"
         android:layout_width="wrap_content"
