--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/pink_200"
-    tools:context="com.fragments.MoviesFragment">
+    tools:context=".fragments.MoviesFragment">
   <TextView
       android:id="@+id/text_empty"
       android:layout_width="wrap_content"
