--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -3,18 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <data>
-    <import type="com.constants.Constants"/>
+    <import type="com.task.constants.Constants"/>
     <import type="kotlin.Unit" />
 
     <import type="kotlin.jvm.functions.Function1" />
 
     <variable
         name="item"
-        type="com.dto.MovieListDTO.Result" />
+        type="com.task.dto.MovieListDTO.Result" />
 
     <variable
         name="onItemClick"
-        type="Function1&lt;com.dto.MovieListDTO.Result,Unit>" />
+        type="Function1&lt;com.task.dto.MovieListDTO.Result,Unit>" />
   </data>
 
   <androidx.constraintlayout.widget.ConstraintLayout
