--- a/NotificationHelper/src/main/res/layout/notification_normal.xml
+++ b/NotificationHelper/src/main/res/layout/notification_normal.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="horizontal">
   <RelativeLayout
       android:layout_width="300dp"
       android:layout_height="wrap_content">
@@ -11,7 +10,7 @@
         android:id="@+id/text_title_normal_noti"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Notification"
+        android:text="@string/notification"
         android:textColor="@color/black"
         android:layout_alignParentTop="true"
         style="@style/TextAppearance.Compat.Notification.Title"/>
@@ -19,7 +18,7 @@
         android:id="@+id/text_normal_noti"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:text="The messaging"
+        android:text="@string/the_messaging"
         android:ellipsize="end"
         android:maxLines="1"
         android:layout_below="@id/text_title_normal_noti"
@@ -29,8 +28,9 @@
       android:id="@+id/image_normal_noti"
       android:layout_width="60dp"
       android:layout_height="60dp"
-      android:scaleType="centerCrop"
+      android:scaleType="fitXY"
       android:src="@drawable/poster_placeholder"
       android:layout_marginLeft="10dp"
-      android:layout_marginBottom="50dp"/>
+      android:layout_marginBottom="50dp"
+      android:contentDescription="@null"/>
 </LinearLayout>
