--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <data>
-    <import type="com.task.constants.Constants"/>
+    <import type="com.example.notification.Constants"/>
     <import type="kotlin.Unit" />
 
     <import type="kotlin.jvm.functions.Function1" />
